# ray-trace

./: Cargo.toml  profiling.md  shoot.py
src/: camera.rs  image.rs  main.rs  material.rs  parse.rs  sample.rs  scene.rs  scenes.rs  shape.rs  shapes.rs  vec.rs
src/archive/: camera.rs
src/integrator/: mod.rs
src/scene/: mod.rs
src/src.bak/: camera.rs  main.rs  material.rs  shape.rs  vec.rs
